--- a/exercicios/ex0024/iframe02.html
+++ b/exercicios/ex0024/iframe02.html
@@ -21,7 +21,7 @@
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia, nisi velit suscipit molestiae neque nihil delectus ex facere iste magni inventore ea labore commodi laboriosam nostrum dolorem voluptatum deserunt vel!
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat doloribus ratione dolorem neque commodi quod nam, porro quo nihil enim ad repudiandae odit quam sapiente natus, asperiores quos deleniti. Architecto!
     </p>
-<iframe src="https://jefersonfranciscosoterio.github.io/efeito-paralax/" frameborder="1" height="500" width="500"></iframe>
+<iframe src="tabela06.html" frameborder="1" height="500" width="500"></iframe>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores repudiandae officia facilis neque, accusantium ipsum eos eligendi eum esse laudantium odit eius et voluptate consequatur a minus saepe numquam nobis. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem quisquam optio alias quas enim, vero illo laboriosam ea, autem architecto, tempora labore minima sunt voluptatibus nulla. Amet unde esse iure.</p>
 </body>
 </html>
