adicionei meu perfil  do github

--- a/exercicios/ex0024/iframe01.html
+++ b/exercicios/ex0024/iframe01.html
@@ -11,7 +11,7 @@
       <iframe src="https://www.cursoemvideo.com" frameborder="1" height="400" width="300"></iframe>  
         para aprender a programar.</p>
         <p>O repositório do 
-           <iframe src="https://gustavoguanabara.github.io" frameborder="1" height="400" width="300"></iframe> 
+           <iframe src="https://github.com/jefersonfranciscosoterio" frameborder="1" height="400" width="300"></iframe> 
             também é bem legal.</p>
     
 </body>
