--- a/exercicios/ex0024/iframe03.html
+++ b/exercicios/ex0024/iframe03.html
@@ -26,7 +26,7 @@
     </ul>
     
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo eligendi quae minus consequatur, quam magnam, ullam dignissimos explicabo totam, soluta vero nesciunt? Assumenda praesentium error cupiditate eum illum recusandae accusantium?</p>
-    <iframe src="" frameborder="1" id="tela" name="frame">
+    <iframe src="iframe02.html" frameborder="1" id="tela" name="frame">
         <p>Infelizmente o seu navegador não é compativel com isso.</p>
     </iframe>
 
