deu erro no iframe 3

--- a/exercicios/ex0024/iframe03.html
+++ b/exercicios/ex0024/iframe03.html
@@ -26,7 +26,7 @@
     </ul>
     
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo eligendi quae minus consequatur, quam magnam, ullam dignissimos explicabo totam, soluta vero nesciunt? Assumenda praesentium error cupiditate eum illum recusandae accusantium?</p>
-    <iframe src="paginas extras/pag02.html" frameborder="1" id="tela" name="frame">
+    <iframe srcdoc="<h1>Escolha uma das opções acima</h1><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa saepe, consequuntur excepturi cum reprehenderit nisi ea debitis modi. Quam rerum, consectetur est totam animi libero! Neque dolor cupiditate voluptas ipsam?</p><img src='imagens/logo.png'>"></iframe> frameborder="1" id="tela" name="frame">
         <p>Infelizmente o seu navegador não é compativel com isso.</p>
     </iframe>
 
