--- a/exercicios/ex0024/iframe03.html
+++ b/exercicios/ex0024/iframe03.html
@@ -26,7 +26,7 @@
     </ul>
     
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo eligendi quae minus consequatur, quam magnam, ullam dignissimos explicabo totam, soluta vero nesciunt? Assumenda praesentium error cupiditate eum illum recusandae accusantium?</p>
-    <iframe id="tela" name="frame" src="">
+    <iframe id="tela" name="frame" srcdoc="<h1>Escolha uma das opções acima</h1><p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus temporibus nam iusto maxime recusandae sequi ullam adipisci consectetur, voluptate dolorum error totam delectus distinctio nemo! Debitis aliquid maxime ullam maiores!</p><img src='imagens/favicon.ico'>">
         <p>Infelizmente o seu navegador não é compativel com isso.</p>
     </iframe>
 
