primeiro site com estilos media query

--- a/exercicios/ex0026/mq001/index.html
+++ b/exercicios/ex0026/mq001/index.html
@@ -3,9 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Media Query</title>
+    <!--Chamadas de Media Query --> 
+    <link rel="stylesheet" href="estilos/tela.css" media="screen">
+    <link rel="stylesheet" href="estilos/impressora.css" media="print">
 </head>
 <body>
     
+    <header>
+        <h1>Notícias</h1>
+        <menu>
+            <ul>
+                <li>Esportes</li>
+                <li>Política</li>
+                <li>Tecnologia</li>
+            </ul>
+
+        </menu>
+    </header>
+
+    <main>
+     <article>
+     <h2>Estou aprendendo a criar Media Queries</h2> 
+     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis distinctio eos possimus ratione, aut perferendis. Nihil itaque doloremque magni odio facilis, aut dignissimos? Sed quia nam, saepe dolor ab explicabo! Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit quam sint error nihil harum perferendis! Non natus doloremque, aspernatur quod in eligendi repellat error soluta veritatis veniam libero odit? Tenetur.</p>
+     
+     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore excepturi provident molestiae ducimus quibusdam ratione esse impedit. Quis magni, perferendis sed saepe, quibusdam nesciunt excepturi, quasi doloribus qui libero facilis? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis ducimus sit necessitatibus vero. Earum, id quidem nihil fugit cupiditate rem non quas repudiandae voluptate soluta laudantium error molestias, cumque neque.</p>
+
+     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi minima obcaecati labore molestias dolores modi quisquam consectetur quod animi numquam dolorem ipsam vero mollitia praesentium, earum quaerat accusamus adipisci a?</p>
+     </article>   
+    </main>
 </body>
 </html>
