--- a/exercicios/ex0026/mq005/index.html
+++ b/exercicios/ex0026/mq005/index.html
@@ -11,11 +11,11 @@
         <h1>Meu Site</h1>
         <menu>
             <ul>
-              <li><a href="#"></a>Opçãi 1</li>
-              <li><a href="#"></a>0pção 2</li>
-              <li><a href="#"></a>0pção 3</li>
-              <li><a href="#"></a>Opção 4</li>
-              <li><a href="#"></a>Opção5</li>  
+              <li><a href="#">Opçãi 1</a></li>
+              <li><a href="#">0pção 2</a></li>
+              <li><a href="#">0pção 3</a></li>
+              <li><a href="#">Opção 4</a></li>
+              <li><a href="#">Opção5</a></li>  
             </ul>
         </menu>
     </header>
