fiz reparo em um parágrafo do texto do site

--- a/exercicios/ex0026/mq005/index.html
+++ b/exercicios/ex0026/mq005/index.html
@@ -31,7 +31,7 @@
 
 <p>As tecnologias primitivas ou clássicas envolvem a descoberta do fogo, a invenção da roda, a escrita, dentre outras. As tecnologias medievais englobam invenções como a prensa móvel, tecnologias militares com a criação de armas ou as tecnologias das grandes navegações que permitiram a expansão marítima. As invenções tecnológicas da Revolução Industrial (século XVIII) provocaram profundas transformações no processo produtivo.</p>
 
-A<p> partir do século XX, destacam-se as tecnologias de informação e comunicação através da evolução das telecomunicações, utilização dos computadores, desenvolvimento da internet e ainda, as tecnologias avançadas, que englobam a utilização de Energia Nuclear, Nanotecnologia, Biotecnologia, etc. Atualmente, a alta tecnologia, ou seja, a tecnologia mais avançada é conhecida como tecnologia de ponta.</p>
+<p>A partir do século XX, destacam-se as tecnologias de informação e comunicação através da evolução das telecomunicações, utilização dos computadores, desenvolvimento da internet e ainda, as tecnologias avançadas, que englobam a utilização de Energia Nuclear, Nanotecnologia, Biotecnologia, etc. Atualmente, a alta tecnologia, ou seja, a tecnologia mais avançada é conhecida como tecnologia de ponta.</p>
 
 <p>As novas tecnologias são fruto do desenvolvimento tecnológico alcançado pelo ser humano e têm um papel fundamental no âmbito da inovação.</p>
 
