--- a/exercicios/ex0026/mq005/index.html
+++ b/exercicios/ex0026/mq005/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
     <header>
         <h1>Meu Site</h1>
-        <menu>
+        <i class="material-icons" onclick="clickMenu()">menu</i>
+        <menu id="itens">
             <ul>
               <li><a href="#">Opçãi 1</a></li>
               <li><a href="#">0pção 2</a></li>
@@ -39,5 +41,16 @@
 
         </article>
     </main>
+    <script>
+     function clickMenu() {
+        if (itens.style.display == 'block') {
+            intens.style.display = 'none'
+        } else {
+            itens.style.display = 'block'
+        }
+
+     }
+        
+    </script>
 </body>
 </html>
