--- a/exercicios/ex0026/mq005/index.html
+++ b/exercicios/ex0026/mq005/index.html
@@ -44,7 +44,7 @@
     <script>
      function clickMenu() {
         if (itens.style.display == 'block') {
-            intens.style.display = 'none'
+            itens.style.display = 'none'
         } else {
             itens.style.display = 'block'
         }
