--- a/exercicios/ex0026/mq005/index.html
+++ b/exercicios/ex0026/mq005/index.html
@@ -14,8 +14,8 @@
         <menu id="itens">
             <ul>
               <li><a href="#">Opção 1</a></li>
-              <li><a href="#">0pção 2</a></li>
-              <li><a href="#">0pção 3</a></li>
+              <li><a href="#">Opção 2</a></li>
+              <li><a href="#">Opção 3</a></li>
               <li><a href="#">Opção 4</a></li>
               <li><a href="#">Opção 5</a></li>  
             </ul>
